# win-audio-to-airplay

./: .gitignore  README.md  pyproject.toml
windows_to_airplay/: airplay.py  capture.py  cli.py  ffmpeg.py  gui.py  gui_backend.py
